# projeto_pistao

./: README.md
cilindro_eaton/: central_pistao.py  conf.csv  dados.csv
cilindro_eaton/dados_pistao/: 02-02-10bar-0C.csv  02-02-10bar-10Cneg.csv  02-02-10bar-20neg.csv  02-02-10bar-23C.csv  02-02-10bar-30neg.csv  02-02-10bar-40neg.csv  02-02-6bar-0C.csv  02-02-6bar-10Cneg.csv  02-02-6bar-20Cneg.csv  02-02-6bar-23C.csv  02-02-6bar-30neg.csv  02-02-6bar-40neg.csv
cilindro_eaton/dados_pistao/0C-18-01-2024/: 0C-10bar-4-2A.csv  0C-6bar-4-2A.csv
regua_encoder/: CMakeLists.txt  HEADME.md  encoder.c  test2.c  test3.c
